# magpie-bot

./: .dockerignore  .env.example  .gitignore  Anchor.toml  Cargo.lock.bak  Cargo.toml  Dockerfile  HACKATHON.md  OPERATIONS.md  README.md  SECURITY-AUDIT-ANCHOR-2026-06-09.md  SECURITY.md  package-lock.json  package.json  railway.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: docker.yml  import-check.yml  leak-check.yml  ltv-guard.yml  migration-lint.yml  syntax-check.yml  uptime-watchdog.yml
backend/src/: index.js
docs/: AUDIT_OUTREACH.md  BLOWFISH_OUTREACH.md  CREDIT_TIER_RATES_SPEC.md  F1_MULTISIG_MIGRATION_RUNBOOK.md  F7_LIQUIDATE_LOAN_VERIFICATION.md  INCIDENT_2026-05-18.md  LIMIT_CLOSE_ENGINE_AUDIT.md  LIMIT_CLOSE_PERFECTION_PROGRESS.md  MAGPIE_SECURITY_PACKET.md  PREMIUM-TIER-DEPLOY-PLAN-2026-06-09.md  PREMIUM-TIER-SCREENER-SPEC.md  PROTOCOL_STRATEGY.md  V3-DEPLOY-READINESS-2026-06-09.md  security-audit-privileged-sign-paths-2026-06-18.md
migrations/: 001_init.sql  002_notifications.sql  003_growth.sql  004_credit_scores.sql  005_risk_engine.sql  006_p2p_marketplace.sql  007_xstocks_collateral.sql  008_loan_limits_and_alerts.sql  009_token_screener.sql  010_submit_token.sql  011_token_health.sql  012_protected_tokens.sql  013_governance_autopilot.sql  014_governance_nominations.sql  015_governance_snapshot_storage.sql  016_governance_distributions.sql  017_premium_tier_whitelist.sql  018_premium_tier_split_by_volatility.sql  019_block_pump_mints_from_stock_class.sql  020_rwa_canonical_mint_pinning.sql  021_canonical_rwa_mints_protect.sql  022_raid_monitor.sql  023_lp_positions_per_pool.sql  024_pin_aaplx.sql  025_limit_close_orders.sql  026_agent_delegations.sql  027_limit_close_auto_escalate.sql  028_limit_close_fill_guarantee.sql  029_limit_close_security_audit.sql  030_limit_close_engine_topup.sql  031_limit_close_slippage_check_widen.sql  032_engine_reserve_replenishments.sql  033_upside_alerts.sql  034_support_vigil.sql  035_downside_alerts.sql  037_limit_close_fee_accrual_marker.sql  038_protocol_fee_sweeps.sql  039_limit_close_trigger_direction.sql  040_rwa_loan_tiers.sql  041_admin_command_log.sql  (+55 more)
programs/agent-vault/: Cargo.toml
programs/agent-vault/src/: lib.rs
programs/magpie-credit-oracle/: Cargo.toml
programs/magpie-credit-oracle/src/: lib.rs
programs/magpie-lending/: Cargo.toml
programs/magpie-lending-v2/: Cargo.toml
programs/magpie-lending-v2/src/: lib.rs
programs/magpie-lending-v3/: Cargo.toml
programs/magpie-lending-v3/src/: lib.rs
programs/magpie-lending-v4/: Cargo.toml  DEPLOY.md
programs/magpie-lending-v4/src/: lib.rs
programs/magpie-lending/src/: lib.rs
programs/vault-consumer/: Cargo.toml
programs/vault-consumer/src/: lib.rs
scripts/: active-loans-snapshot.js  add-bp-token.js  add-magpie-token.js  admin-withdraw.js  apply-token-cap-migration.js  audit-lender-drains-deep.js  audit-lender-drains-helius.js  audit-lender-outflows.js  audit-lp-positions.mjs  backfill-distribution-events.mjs  backfill-holder-counts.js  backfill-holder-pool.js  backfill-liquidation-economics.mjs  backfill-magpie-burns.mjs  backfill-pool-credit-events.mjs  backfill-pumpfun-letsbonk.js  backfill-repay-credit.js  backup-lender-keypair.js  ban-attacker-2026-06-07.js  check-migrations.js  check-privacy.js  check-shared-imports.mjs  check-site.js  check-ticket-loans.js  check-v4-bp.mjs  check-wallet-loans.js  check-x402-contracts.mjs  close-tickets.js  community-broadcast.js  compute-distribution-plan.js  compute-lp-credit.js  crosspost-tweet.js  dedupe-wallets-and-repair-loans.mjs  demo-scenario.ts  demo.sh  deposit-to-pool.js  deposit-to-v4.mjs  deposit-vault.js  diagnose-spcx-twap-lag.mjs  disable-token.js  (+70 more)
scripts/verify-tier2/: run.js
sdk/: package.json  tsconfig.json
sdk/agent-vault/: package.json  tsconfig.json
sdk/src/: index.ts
src/: index.js
src/api/: account-link.js  activity-api.js  agent-intents.js  agent-manage.js  agent-repay.js  agent.js  ai-chat-stream.js  ai-chat.js  auth-utils.js  backfill-wallet-loans.js  cosign-borrow.js  credit-attest.js  dashboard-api.js  debug-recent-errors.js  governance-api.js  governance-distribution-api.js  governance-distributions-list-api.js  governance-tally-api.js  governance-voting-power-api.js  internal-agent-limitclose.js  lender-alarm-webhook.js  loan-tiers-api.js  me-export.js  pip-session.js  points-api.js  prefs-api.js  price-refresh.js  referral-set-code.js  safe-collateral-value.js  server.js  site-limit-close-preflight.js  site-limit-close.js  support-api.js  support-ask.js  sync-loan.js  v4-feed-health.js  v4-repay-preflight.js  v4-twap.js  vault-api.js  wallets-api.js  (+4 more)
src/commands/: _disabled.js  admin-lock.js  admin.js  agent-delegations.js  announcement.js  audit.js  autoprotect.js  bans.js  borrow.js  burn-admin.js  calendar.js  clear-stale.js  community-admin.js  community.js  credit.js  deposit.js  distributions.js  export-data.js  export.js  extend.js  fallback.js  feedback.js  gov-admin.js  health.js  help.js  history.js  holders.js  home.js  import-wallet.js  lc-perf.js  lc-status.js  lend.js  limit-close-intervention.js  limit-close.js  link.js  lock.js  magpie.js  me.js  my-tickets.js  nominations.js  (+41 more)
src/db/: pool.js  (+1 more)
tests/: agent-vault.ts  magpie-lending.ts  token-vault.ts
(+204 files in other folders)
