[workspace]
members = ["programs/magpie-credit-oracle", "programs/agent-vault", "programs/vault-consumer"]
exclude = ["programs/magpie-lending-v2", "programs/magpie-lending-v3"]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
