[package]
name = "agent-vault"
version = "0.1.0"
description = "Programmable wallets for AI agents on Solana — on-chain spending policies, session keys, and audit trails"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
