[package]
name = "magpie-credit-oracle"
version = "0.1.0"
description = "On-chain composable credit score oracle for the Magpie protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magpie_credit_oracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
