[package]
name = "magpie-lending"
version = "0.1.0"
description = "Permissionless memecoin-collateralized lending protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "magpie_lending"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = "0.30.1"
