[package]
name = "vault-consumer"
version = "0.1.0"
description = "CPI consumer example — Task Escrow that pays agents via Agent Vault"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault_consumer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "agent-vault/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
agent-vault = { path = "../agent-vault", features = ["cpi"] }
